syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";

message ProductModelBomInfo {
	//ID 
    string id=2;
	//项目号 
 	string itemNo=3;
	//物料号 
 	string materialNo=4;
	//物料描述 
 	string materialDescription=5;
	//需求数量 
 	float requireQTY=6;
	//单位 
 	string unit=7;
	//需求工序 
 	string productionProcess=8;
	//备注 
 	string remark=9;
	//产品型号ID 
    string productModelID=10;
    //产品类别ID
    string productCategoryID=11;
}

message QueryProductModelBomRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//物料号 
    // @inject_tag: uri:"materialNo" form:"materialNo"
    string materialNo=6;
    //产品类别ID
    // @inject_tag: uri:"productCategoryID" form:"productCategoryID"
    string productCategoryID=7;
    //产品型号ID
    // @inject_tag: uri:"productModelID" form:"productModelID"
    string productModelID=8;
}

message QueryProductModelBomResponse{
    Code code=1;
    string message=2;
    repeated ProductModelBomInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductModelBomResponse{
    Code code=1;
    string message=2;
    repeated ProductModelBomInfo data=3;
}

message GetProductModelBomDetailResponse{
    Code code=1;
    string message=2;
    ProductModelBomInfo data=3;
}